# rust-os

./: .gitignore  .travis.yml  Cargo.toml  README.md  run
.cargo/: config  config.toml
src/: lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs
